@@ -17,6 +17,7 @@
 
 package org.wildfly.prospero.it.commonapi;
 
+import org.apache.commons.io.FileUtils;
 import org.eclipse.aether.DefaultRepositorySystemSession;
 import org.eclipse.aether.RepositorySystem;
 import org.eclipse.aether.artifact.Artifact;
@@ -24,35 +25,41 @@ import org.eclipse.aether.artifact.DefaultArtifact;
 import org.eclipse.aether.deployment.DeployRequest;
 import org.eclipse.aether.deployment.DeploymentException;
 import org.jboss.galleon.ProvisioningException;
+import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
 import org.wildfly.channel.Channel;
+import org.wildfly.channel.ChannelManifest;
+import org.wildfly.channel.ChannelManifestCoordinate;
+import org.wildfly.channel.Repository;
 import org.wildfly.channel.Stream;
 import org.wildfly.prospero.actions.UpdateAction;
 import org.wildfly.prospero.api.InstallationMetadata;
 import org.wildfly.prospero.api.ProvisioningDefinition;
+import org.wildfly.prospero.api.RepositoryUtils;
 import org.wildfly.prospero.it.AcceptingConsole;
-import org.wildfly.prospero.model.ChannelRef;
 import org.wildfly.prospero.model.ManifestYamlSupport;
 import org.wildfly.prospero.model.ProsperoConfig;
-import org.wildfly.prospero.model.RepositoryRef;
 import org.wildfly.prospero.test.MetadataTestUtils;
 import org.wildfly.prospero.wfchannel.MavenSessionManager;
 
 import java.io.File;
 import java.io.IOException;
 import java.net.MalformedURLException;
+import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.StandardOpenOption;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertTrue;
+import static org.wildfly.prospero.actions.ApplyCandidateAction.UPDATE_MARKER_FILE;
 
 public class UpdateTest extends WfCoreTestBase {
 
@@ -64,27 +71,37 @@ public class UpdateTest extends WfCoreTestBase {
         mockRepo = temp.newFolder("repo");
     }
 
+    @After
+    public void tearDown() throws Exception {
+        if (mockRepo.exists()) {
+            FileUtils.deleteQuietly(mockRepo);
+        }
+    }
+
     @Test
     public void updateWildflyCoreWithNewChannel() throws Exception {
-        // deploy channel file
-        File channelFile = new File(MetadataTestUtils.class.getClassLoader().getResource(CHANNEL_BASE_CORE_19).toURI());
-        deployChannelFile(channelFile, "1.0.0");
+        // deploy manifest file
+        File manifestFile = new File(MetadataTestUtils.class.getClassLoader().getResource(CHANNEL_BASE_CORE_19).toURI());
+        deployManifestFile(mockRepo.toURI().toURL(), manifestFile, "1.0.0");
 
         // provision using channel gav
         final ProvisioningDefinition provisioningDefinition = defaultWfCoreDefinition()
-                .setProvisionConfig(buildConfigWithMockRepo().toPath())
+                .setChannelCoordinates(buildConfigWithMockRepo().toPath().toString())
+                .setOverrideRepositories(Collections.emptyList()) // reset overrides from defaultWfCoreDefinition()
                 .build();
-        installation.provision(provisioningDefinition);
+        installation.provision(provisioningDefinition.toProvisioningConfig(),
+                provisioningDefinition.resolveChannels(CHANNELS_RESOLVER_FACTORY));
 
         Optional<Artifact> wildflyCliArtifact = readArtifactFromManifest("org.wildfly.core", "wildfly-cli");
         assertEquals(BASE_VERSION, wildflyCliArtifact.get().getVersion());
 
-        // update channel file
-        final File updatedChannel = upgradeTestArtifactIn(channelFile);
-        deployChannelFile(updatedChannel, "1.0.1");
+        // update manifest file
+        final File updatedManifest = upgradeTestArtifactIn(manifestFile);
+        deployManifestFile(mockRepo.toURI().toURL(), updatedManifest, "1.0.1");
 
         // update installation
-        new UpdateAction(outputPath, mavenSessionManager, new AcceptingConsole()).doUpdateAll(false);
+        new UpdateAction(outputPath, mavenSessionManager, new AcceptingConsole(), Collections.emptyList())
+                .performUpdate();
 
         wildflyCliArtifact = readArtifactFromManifest("org.wildfly.core", "wildfly-cli");
         assertEquals(UPGRADE_VERSION, wildflyCliArtifact.get().getVersion());
@@ -92,34 +109,96 @@ public class UpdateTest extends WfCoreTestBase {
 
     @Test
     public void updateWildflyCoreIgnoreChangesInProsperoConfig() throws Exception {
-        final Path prosperoConfigFile = outputPath.resolve(InstallationMetadata.METADATA_DIR)
-                .resolve(InstallationMetadata.PROSPERO_CONFIG_FILE_NAME);
+        final Path channelsFile = outputPath.resolve(InstallationMetadata.METADATA_DIR)
+                .resolve(InstallationMetadata.INSTALLER_CHANNELS_FILE_NAME);
 
-        // deploy channel file
-        File channelFile = new File(MetadataTestUtils.class.getClassLoader().getResource(CHANNEL_BASE_CORE_19).toURI());
-        deployChannelFile(channelFile, "1.0.0");
+        // deploy manifest file
+        File manifestFile = new File(MetadataTestUtils.class.getClassLoader().getResource(CHANNEL_BASE_CORE_19).toURI());
+        deployManifestFile(mockRepo.toURI().toURL(), manifestFile, "1.0.0");
 
-        // provision using channel gav
+        // provision using manifest gav
         final ProvisioningDefinition provisioningDefinition = defaultWfCoreDefinition()
-                .setProvisionConfig(buildConfigWithMockRepo().toPath())
+                .setChannelCoordinates(buildConfigWithMockRepo().toPath().toString())
+                .setOverrideRepositories(Collections.emptyList()) // reset overrides from defaultWfCoreDefinition()
                 .build();
-        installation.provision(provisioningDefinition);
+        installation.provision(provisioningDefinition.toProvisioningConfig(),
+                provisioningDefinition.resolveChannels(CHANNELS_RESOLVER_FACTORY));
 
-        Files.writeString(prosperoConfigFile, "# test comment", StandardOpenOption.APPEND);
+        Files.writeString(channelsFile, "# test comment", StandardOpenOption.APPEND);
 
-        // update channel file
-        final File updatedChannel = upgradeTestArtifactIn(channelFile);
-        deployChannelFile(updatedChannel, "1.0.1");
+        // update manifest file
+        final File updatedChannel = upgradeTestArtifactIn(manifestFile);
+        deployManifestFile(mockRepo.toURI().toURL(), updatedChannel, "1.0.1");
 
         // update installation
-        new UpdateAction(outputPath, mavenSessionManager, new AcceptingConsole()).doUpdateAll(false);
+        new UpdateAction(outputPath, mavenSessionManager, new AcceptingConsole(), Collections.emptyList())
+                .performUpdate();
 
-        assertTrue(Files.readString(prosperoConfigFile).contains("# test comment"));
+        assertTrue(Files.readString(channelsFile).contains("# test comment"));
     }
 
-    private File upgradeTestArtifactIn(File channelFile) throws IOException {
-        final Channel channel = ManifestYamlSupport.parse(channelFile);
-        final List<Stream> streams = channel.getStreams().stream().map(s -> {
+    @Test
+    public void prepareUpdateCreatesMarkerFile() throws Exception {
+        // deploy manifest file
+        File manifestFile = new File(MetadataTestUtils.class.getClassLoader().getResource(CHANNEL_BASE_CORE_19).toURI());
+        deployManifestFile(mockRepo.toURI().toURL(), manifestFile, "1.0.0");
+
+        // provision using manifest gav
+        final ProvisioningDefinition provisioningDefinition = defaultWfCoreDefinition()
+                .setChannelCoordinates(buildConfigWithMockRepo().toPath().toString())
+                .setOverrideRepositories(Collections.emptyList()) // reset overrides from defaultWfCoreDefinition()
+                .build();
+        installation.provision(provisioningDefinition.toProvisioningConfig(),
+                provisioningDefinition.resolveChannels(CHANNELS_RESOLVER_FACTORY));
+        final String latestRevision = MetadataTestUtils.getLatestRevision(outputPath);
+
+        // update manifest file
+        final File updatedChannel = upgradeTestArtifactIn(manifestFile);
+        deployManifestFile(mockRepo.toURI().toURL(), updatedChannel, "1.0.1");
+
+        // update installation
+        final Path preparedUpdatePath = temp.newFolder().toPath();
+        new UpdateAction(outputPath, mavenSessionManager, new AcceptingConsole(), Collections.emptyList())
+                .buildUpdate(preparedUpdatePath);
+
+        final Path markerFile = preparedUpdatePath.resolve(UPDATE_MARKER_FILE);
+        assertTrue(Files.exists(markerFile));
+    }
+
+    @Test
+    public void updateRequiresOnlyChangedArtifacts() throws Exception {
+        // deploy manifest file
+        File manifestFile = new File(MetadataTestUtils.class.getClassLoader().getResource(CHANNEL_BASE_CORE_19).toURI());
+        deployManifestFile(mockRepo.toURI().toURL(), manifestFile, "1.0.0");
+
+        // provision using manifest gav
+        final ProvisioningDefinition provisioningDefinition = defaultWfCoreDefinition()
+                .setChannelCoordinates(buildConfigWithMockRepo().toPath().toString())
+                .setOverrideRepositories(Collections.emptyList()) // reset overrides from defaultWfCoreDefinition()
+                .build();
+        installation.provision(provisioningDefinition.toProvisioningConfig(),
+                provisioningDefinition.resolveChannels(CHANNELS_RESOLVER_FACTORY));
+
+        // update manifest file
+        final URL tempRepo = mockTemporaryRepo(true);
+        final File updatedChannel = upgradeTestArtifactIn(manifestFile);
+        deployManifestFile(tempRepo, updatedChannel, "1.0.1");
+
+        // offline MSM will disable http(s) repositories and local maven cache
+        MavenSessionManager offlineMsm = new MavenSessionManager(Optional.empty(), true);
+
+        // update installation
+        new UpdateAction(outputPath, offlineMsm, new AcceptingConsole(),
+                List.of(new Repository("temp", tempRepo.toExternalForm())))
+                .performUpdate();
+
+        Optional<Artifact> wildflyCliArtifact = readArtifactFromManifest("org.wildfly.core", "wildfly-cli");
+        assertEquals(UPGRADE_VERSION, wildflyCliArtifact.get().getVersion());
+    }
+
+    private File upgradeTestArtifactIn(File manifestFile) throws IOException {
+        final ChannelManifest manifest = ManifestYamlSupport.parse(manifestFile);
+        final List<Stream> streams = manifest.getStreams().stream().map(s -> {
             if (s.getGroupId().equals("org.wildfly.core") && s.getArtifactId().equals("wildfly-cli")) {
                 return new Stream(s.getGroupId(), s.getArtifactId(), UPGRADE_VERSION);
             }
@@ -127,26 +206,29 @@ public class UpdateTest extends WfCoreTestBase {
         }).collect(Collectors.toList());
 
         final File file = temp.newFile("test-channel.yaml");
-        ManifestYamlSupport.write(new Channel(channel.getSchemaVersion(), channel.getName(), null, null, null, streams),
+        ManifestYamlSupport.write(new ChannelManifest(manifest.getSchemaVersion(), manifest.getName(), null, streams),
                 file.toPath());
         return file;
     }
 
     private File buildConfigWithMockRepo() throws IOException {
-        final List<RepositoryRef> repositories = new ArrayList<>(defaultRemoteRepositories());
-        final File configFile = temp.newFile(InstallationMetadata.PROSPERO_CONFIG_FILE_NAME);
-        repositories.add(new RepositoryRef("test-repo", mockRepo.toURI().toURL().toString()));
-        new ProsperoConfig(Arrays.asList(new ChannelRef("test:channel", null)), repositories).writeConfig(configFile);
-        return configFile;
+        final List<Repository> repositories = new ArrayList<>(defaultRemoteRepositories());
+        final File channelsFile = temp.newFile(InstallationMetadata.INSTALLER_CHANNELS_FILE_NAME);
+        repositories.add(new Repository("test-repo", mockRepo.toURI().toURL().toString()));
+        Channel channel = new Channel("test", "", null, repositories,
+                new ChannelManifestCoordinate("test", "channel"), null, null);
+        new ProsperoConfig(List.of(channel)).writeConfig(channelsFile.toPath());
+        return channelsFile;
     }
 
-    private void deployChannelFile(File channelFile, String version) throws ProvisioningException, MalformedURLException, DeploymentException {
+    private void deployManifestFile(URL repoUrl, File channelFile, String version) throws ProvisioningException, MalformedURLException, DeploymentException {
         final MavenSessionManager msm = new MavenSessionManager();
         final RepositorySystem system = msm.newRepositorySystem();
         final DefaultRepositorySystemSession session = msm.newRepositorySystemSession(system);
         final DeployRequest request = new DeployRequest();
-        request.setRepository(new RepositoryRef("test-repo", mockRepo.toURI().toURL().toString()).toRemoteRepository());
-        request.setArtifacts(Arrays.asList(new DefaultArtifact("test", "channel", "channel", "yaml", version,
+        request.setRepository(RepositoryUtils.toRemoteRepository("test-repo", repoUrl.toExternalForm()));
+        request.setArtifacts(Arrays.asList(new DefaultArtifact("test", "channel",
+                ChannelManifest.CLASSIFIER, ChannelManifest.EXTENSION, version,
                 null, channelFile)));
         system.deploy(session, request);
     }
