@@ -23,21 +23,23 @@ import org.junit.rules.TemporaryFolder;
 import org.junit.runner.RunWith;
 import org.mockito.Mock;
 import org.mockito.junit.MockitoJUnitRunner;
+import org.wildfly.channel.Channel;
+import org.wildfly.channel.ChannelManifestCoordinate;
+import org.wildfly.channel.Repository;
 import org.wildfly.prospero.actions.MetadataAction;
 import org.wildfly.prospero.actions.PromoteArtifactBundleAction;
+import org.wildfly.prospero.api.ArtifactUtils;
 import org.wildfly.prospero.cli.AbstractConsoleTest;
 import org.wildfly.prospero.cli.ActionFactory;
 import org.wildfly.prospero.cli.CliMessages;
 import org.wildfly.prospero.cli.ReturnCodes;
 import org.wildfly.prospero.cli.commands.CliConstants;
-import org.wildfly.prospero.model.ChannelRef;
-import org.wildfly.prospero.model.RepositoryRef;
 import org.wildfly.prospero.test.MetadataTestUtils;
 
 import java.net.URL;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.Arrays;
+import java.util.List;
 
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertTrue;
@@ -74,11 +76,11 @@ public class ChannelPromoteCommandTest extends AbstractConsoleTest {
                 CliConstants.Commands.CHANNEL, CUSTOMIZATION_PROMOTE,
                 CliConstants.CUSTOMIZATION_REPOSITORY_URL, "file:///test/test",
                 CliConstants.CUSTOMIZATION_ARCHIVE, "test/archive.zip",
-                CliConstants.CUSTOMIZATION_CHANNEL_NAME, "org.test:custom-channel");
+                CliConstants.CHANNEL_MANIFEST, "org.test:custom-channel");
 
         assertEquals(ReturnCodes.SUCCESS, exitCode);
         verify(promoter).promote(Paths.get("test/archive.zip").toAbsolutePath(), new URL("file:///test/test"),
-                ChannelRef.fromString("org.test:custom-channel"));
+                ArtifactUtils.manifestCoordFromString("org.test:custom-channel"));
     }
 
     @Test
@@ -86,7 +88,7 @@ public class ChannelPromoteCommandTest extends AbstractConsoleTest {
         int exitCode = commandLine.execute(
                 CliConstants.Commands.CHANNEL, CUSTOMIZATION_PROMOTE,
                 CliConstants.CUSTOMIZATION_ARCHIVE, "test/archive.zip",
-                CliConstants.CUSTOMIZATION_CHANNEL_NAME, "org.test:custom-channel");
+                CliConstants.CHANNEL_MANIFEST, "org.test:custom-channel");
 
         assertEquals(ReturnCodes.INVALID_ARGUMENTS, exitCode);
         assertTrue(getErrorOutput().contains("Unable to determine custom channel and repository"));
@@ -97,7 +99,7 @@ public class ChannelPromoteCommandTest extends AbstractConsoleTest {
         int exitCode = commandLine.execute(
                 CliConstants.Commands.CHANNEL, CUSTOMIZATION_PROMOTE,
                 CliConstants.CUSTOMIZATION_REPOSITORY_URL, "file:///test/test",
-                CliConstants.CUSTOMIZATION_CHANNEL_NAME, "org.test:custom-channel");
+                CliConstants.CHANNEL_MANIFEST, "org.test:custom-channel");
 
         assertEquals(ReturnCodes.INVALID_ARGUMENTS, exitCode);
         assertTrue(getErrorOutput().contains(String.format("Missing required option: '%s", CliConstants.CUSTOMIZATION_ARCHIVE)));
@@ -120,7 +122,7 @@ public class ChannelPromoteCommandTest extends AbstractConsoleTest {
                 CliConstants.Commands.CHANNEL, CUSTOMIZATION_PROMOTE,
                 CliConstants.CUSTOMIZATION_REPOSITORY_URL, "file:///test/test",
                 CliConstants.CUSTOMIZATION_ARCHIVE, "test/archive.zip",
-                CliConstants.CUSTOMIZATION_CHANNEL_NAME, "wrongchannelsyntax");
+                CliConstants.CHANNEL_MANIFEST, "wrongchannelsyntax");
 
         assertEquals(ReturnCodes.INVALID_ARGUMENTS, exitCode);
         assertTrue(getErrorOutput().contains(CliMessages.MESSAGES.wrongChannelCoordinateFormat()));
@@ -132,10 +134,14 @@ public class ChannelPromoteCommandTest extends AbstractConsoleTest {
         MetadataTestUtils.createInstallationMetadata(installationDir);
         MetadataTestUtils.createGalleonProvisionedState(installationDir, "org.wildfly.core:core-feature-pack");
 
+        Channel channel = new Channel("Customization", null, null,
+                List.of(new Repository(CUSTOMIZATION_REPO_ID, "file:///test/test")),
+                new ChannelManifestCoordinate(CUSTOM_CHANNELS_GROUP_ID, "test1"),
+                null, null);
+
         when(actionFactory.promoter(any())).thenReturn(promoter);
         when(actionFactory.metadataActions(any())).thenReturn(metadataAction);
-        when(metadataAction.getChannels()).thenReturn(Arrays.asList(new ChannelRef(CUSTOM_CHANNELS_GROUP_ID + ":test1", null)));
-        when(metadataAction.getRepositories()).thenReturn(Arrays.asList(new RepositoryRef(CUSTOMIZATION_REPO_ID, "file:///test/test")));
+        when(metadataAction.getChannels()).thenReturn(List.of(channel));
 
         int exitCode = commandLine.execute(
                 CliConstants.Commands.CHANNEL, CUSTOMIZATION_PROMOTE,
@@ -144,7 +150,7 @@ public class ChannelPromoteCommandTest extends AbstractConsoleTest {
                 );
         assertEquals(ReturnCodes.SUCCESS, exitCode);
         verify(promoter).promote(Paths.get("test/archive.zip").toAbsolutePath(), new URL("file:///test/test"),
-                ChannelRef.fromString(CUSTOM_CHANNELS_GROUP_ID + ":test1"));
+                ArtifactUtils.manifestCoordFromString(CUSTOM_CHANNELS_GROUP_ID + ":test1"));
     }
 
     @Test
@@ -158,13 +164,13 @@ public class ChannelPromoteCommandTest extends AbstractConsoleTest {
         int exitCode = commandLine.execute(
                 CliConstants.Commands.CHANNEL, CUSTOMIZATION_PROMOTE,
                 CliConstants.CUSTOMIZATION_REPOSITORY_URL, "http://test.repo",
-                CliConstants.CUSTOMIZATION_CHANNEL_NAME, "org.custom:test",
+                CliConstants.CHANNEL_MANIFEST, "org.custom:test",
                 CliConstants.CUSTOMIZATION_ARCHIVE, "test/archive.zip",
                 CliConstants.DIR, installationDir.toString()
         );
         assertEquals(ReturnCodes.SUCCESS, exitCode);
         verify(promoter).promote(Paths.get("test/archive.zip").toAbsolutePath(), new URL("http://test.repo"),
-                ChannelRef.fromString("org.custom:test"));
+                ArtifactUtils.manifestCoordFromString("org.custom:test"));
     }
 
     @Test
@@ -173,9 +179,14 @@ public class ChannelPromoteCommandTest extends AbstractConsoleTest {
         MetadataTestUtils.createInstallationMetadata(installationDir);
         MetadataTestUtils.createGalleonProvisionedState(installationDir, "org.wildfly.core:core-feature-pack");
 
+        Channel channel = new Channel("Customization", null, null,
+                List.of(new Repository(CUSTOMIZATION_REPO_ID, "file:///test/test")),
+                new ChannelManifestCoordinate(CUSTOM_CHANNELS_GROUP_ID, "test1"),
+                null, null);
+
         when(actionFactory.promoter(any())).thenReturn(promoter);
         when(actionFactory.metadataActions(any())).thenReturn(metadataAction);
-        when(metadataAction.getChannels()).thenReturn(Arrays.asList(new ChannelRef(CUSTOM_CHANNELS_GROUP_ID + ":test1", null)));
+        when(metadataAction.getChannels()).thenReturn(List.of(channel));
 
         int exitCode = commandLine.execute(
                 CliConstants.Commands.CHANNEL, CUSTOMIZATION_PROMOTE,
@@ -185,6 +196,6 @@ public class ChannelPromoteCommandTest extends AbstractConsoleTest {
         );
         assertEquals(ReturnCodes.SUCCESS, exitCode);
         verify(promoter).promote(Paths.get("test/archive.zip").toAbsolutePath(), new URL("http://test.repo"),
-                ChannelRef.fromString(CUSTOM_CHANNELS_GROUP_ID + ":test1"));
+                ArtifactUtils.manifestCoordFromString(CUSTOM_CHANNELS_GROUP_ID + ":test1"));
     }
 }
