@@ -17,21 +17,26 @@
 
 package org.wildfly.prospero.test;
 
+import java.io.FileWriter;
 import java.io.IOException;
+import java.io.InputStream;
 import java.net.URL;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
+import java.util.Comparator;
 import java.util.List;
 import java.util.stream.Collectors;
 
 import javax.xml.stream.XMLStreamException;
 
 import org.apache.commons.io.FileUtils;
+import org.apache.commons.io.IOUtils;
+import org.eclipse.aether.artifact.Artifact;
 import org.eclipse.aether.repository.RemoteRepository;
 import org.jboss.galleon.Constants;
 import org.jboss.galleon.state.ProvisionedFeaturePack;
@@ -39,40 +44,41 @@ import org.jboss.galleon.state.ProvisionedState;
 import org.jboss.galleon.universe.FeaturePackLocation;
 import org.jboss.galleon.xml.ProvisionedStateXmlWriter;
 import org.wildfly.channel.Channel;
+import org.wildfly.channel.ChannelManifest;
+import org.wildfly.channel.ChannelManifestCoordinate;
+import org.wildfly.channel.ChannelManifestMapper;
+import org.wildfly.channel.Repository;
 import org.wildfly.channel.Stream;
 import org.wildfly.prospero.api.InstallationMetadata;
+import org.wildfly.prospero.api.SavedState;
 import org.wildfly.prospero.api.exceptions.MetadataException;
-import org.wildfly.prospero.model.ChannelRef;
 import org.wildfly.prospero.model.ProsperoConfig;
-import org.wildfly.prospero.model.RepositoryRef;
 
 public final class MetadataTestUtils {
 
     public static final Path MANIFEST_FILE_PATH =
             Paths.get(InstallationMetadata.METADATA_DIR, InstallationMetadata.MANIFEST_FILE_NAME);
-    public static final Path PROVISION_CONFIG_FILE_PATH =
-            Paths.get(InstallationMetadata.METADATA_DIR, InstallationMetadata.PROSPERO_CONFIG_FILE_NAME);
+    public static final Path INSTALLER_CHANNELS_FILE_PATH =
+            Paths.get(InstallationMetadata.METADATA_DIR, InstallationMetadata.INSTALLER_CHANNELS_FILE_NAME);
 
     private MetadataTestUtils() {
     }
 
-    public static Channel createManifest(Collection<Stream> streams) {
-        return new Channel("manifest", null, null, null, streams);
+    public static ChannelManifest createManifest(Collection<Stream> streams) {
+        return new ChannelManifest("manifest", null, null, streams);
     }
 
     public static InstallationMetadata createInstallationMetadata(Path installation) throws MetadataException {
-        return createInstallationMetadata(installation, createManifest(null), Collections.emptyList(), Collections.emptyList());
+        return createInstallationMetadata(installation, createManifest(null),
+                List.of(new Channel("test-channel", "", null,
+                        List.of(new Repository("test", "http://test.org")),
+                        new ChannelManifestCoordinate("org.test","test"),
+                        null, null)));
     }
 
-    public static InstallationMetadata createInstallationMetadata(Path installation, List<ChannelRef> channels,
-            List<RemoteRepository> repositories) throws MetadataException {
-        return createInstallationMetadata(installation, createManifest(null), channels, repositories);
-    }
-
-    public static InstallationMetadata createInstallationMetadata(Path installation, Channel manifest, List<ChannelRef> channels,
-            List<RemoteRepository> repositories) throws MetadataException {
+    public static InstallationMetadata createInstallationMetadata(Path installation, ChannelManifest manifest, List<Channel> channels) throws MetadataException {
         Runtime.getRuntime().addShutdownHook(new Thread(() -> FileUtils.deleteQuietly(installation.toFile())));
-        final InstallationMetadata metadata = new InstallationMetadata(installation, manifest, channels, repositories);
+        final InstallationMetadata metadata = new InstallationMetadata(installation, manifest, channels);
         metadata.recordProvision(true);
         return metadata;
     }
@@ -89,37 +95,67 @@ public final class MetadataTestUtils {
         return state;
     }
 
-    public static Path prepareProvisionConfig(String channelDescriptor) throws IOException {
-        final Path provisionConfigFile = Files.createTempFile("channels", "yaml").toAbsolutePath();
+    public static Path prepareChannel(String manifestDescriptor) throws IOException {
+        final Path provisionConfigFile = Files.createTempFile("channels", ".yaml").toAbsolutePath();
         provisionConfigFile.toFile().deleteOnExit();
 
-        prepareProvisionConfig(provisionConfigFile, channelDescriptor);
+        prepareChannel(provisionConfigFile, manifestDescriptor);
         return provisionConfigFile;
     }
 
-    public static void prepareProvisionConfig(Path provisionConfigFile, String... channelDescriptor)
+    public static void prepareChannel(Path channelFile, String... manifestDescriptor)
             throws IOException {
-        List<URL> channelUrls = Arrays.stream(channelDescriptor)
+        List<URL> channelUrls = Arrays.stream(manifestDescriptor)
                 .map(d->MetadataTestUtils.class.getClassLoader().getResource(d))
                 .collect(Collectors.toList());
-        prepareProvisionConfig(provisionConfigFile, channelUrls);
+        prepareChannel(channelFile, channelUrls);
     }
 
-    public static void prepareProvisionConfig(Path provisionConfigFile, List<URL> channelUrls) throws IOException {
-        List<ChannelRef> channels = new ArrayList<>();
-        List<RepositoryRef> repositories = defaultRemoteRepositories().stream()
-                .map(r->new RepositoryRef(r.getId(), r.getUrl())).collect(Collectors.toList());
-        for (int i = 0; i< channelUrls.size(); i++) {
-            channels.add(new ChannelRef(null, channelUrls.get(i).toString()));
+    public static void prepareChannel(Path channelFile, List<URL> manifestUrls) throws IOException {
+        List<Channel> channels = new ArrayList<>();
+        List<Repository> repositories = defaultRemoteRepositories().stream()
+                .map(r->new Repository(r.getId(), r.getUrl())).collect(Collectors.toList());
+        for (int i=0; i<manifestUrls.size(); i++) {
+            channels.add(new Channel("test-channel-" + i, "", null, repositories,
+                    new ChannelManifestCoordinate(manifestUrls.get(i)),
+                    null, Channel.NoStreamStrategy.NONE));
         }
-        new ProsperoConfig(channels, repositories).writeConfig(provisionConfigFile.toFile());
+
+        new ProsperoConfig(channels).writeConfig(channelFile);
     }
 
     public static List<RemoteRepository> defaultRemoteRepositories() {
         return Arrays.asList(
                 new RemoteRepository.Builder("maven-central", "default", "https://repo1.maven.org/maven2/").build(),
-                new RemoteRepository.Builder("nexus", "default", "https://repository.jboss.org/nexus/content/groups/public-jboss").build(),
+                new RemoteRepository.Builder("nexus", "default", "https://repository.jboss.org/nexus/content/groups/public").build(),
                 new RemoteRepository.Builder("maven-redhat-ga", "default", "https://maven.repository.redhat.com/ga").build()
         );
+    }
+
+    public static void copyManifest(String resource, Path targetPath) throws IOException {
+        final InputStream resourceStream = MetadataTestUtils.class.getClassLoader().getResourceAsStream(resource);
+
+        try (final FileWriter writer = new FileWriter(targetPath.toFile())) {
+            IOUtils.copy(resourceStream, writer, StandardCharsets.UTF_8);
+        }
+    }
+
+    public static void upgradeStreamInManifest(Path manifestPath, Artifact upgrade) throws IOException {
+        final ChannelManifest manifest = ChannelManifestMapper.from(manifestPath.toUri().toURL());
+        final List<Stream> updatedStreams = manifest.getStreams().stream()
+                .map(s -> {
+                    if (s.getGroupId().equals(upgrade.getGroupId()) && s.getArtifactId().equals(upgrade.getArtifactId())) {
+                        return new Stream(upgrade.getGroupId(), upgrade.getArtifactId(), upgrade.getVersion());
+                    } else {
+                        return s;
+                    }
+                })
+                .collect(Collectors.toList());
+        Files.writeString(manifestPath, ChannelManifestMapper.toYaml(new ChannelManifest(manifest.getName(), manifest.getId(), manifest.getDescription(), updatedStreams)));
+    }
+
+    public static String getLatestRevision(Path installationPath) throws MetadataException {
+        final InstallationMetadata im = new InstallationMetadata(installationPath);
+        return im.getRevisions().stream().sorted(Comparator.comparing(SavedState::getTimestamp)).findFirst().get().getName();
     }
 }
